meet the team alignment fix

--- a/assets/sass/cds/_components.scss
+++ b/assets/sass/cds/_components.scss
@@ -442,9 +442,6 @@
 }
 
 .meet-us-container {
-  width: 80%;
-  justify-content: space-between;
-  margin: 0 auto;
 
   .text-margin {
     width: 70%;
